--- a/.github/workflows/release-image.yaml
+++ b/.github/workflows/release-image.yaml
@@ -23,6 +23,8 @@ jobs:
         run: |
           git tag actions-exam-2.0.0
           git push origin tag actions-exam-2.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
