--- a/.github/workflows/release-image.yaml
+++ b/.github/workflows/release-image.yaml
@@ -13,7 +13,7 @@ jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - name: Checkout repository
