--- a/.github/workflows/release-image.yaml
+++ b/.github/workflows/release-image.yaml
@@ -4,7 +4,9 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['main']
-
+  release:
+    types: [created]
+    
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
