--- a/.github/workflows/release-image.yaml
+++ b/.github/workflows/release-image.yaml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Tag
         run: |
-          git tag -d actions-exam-2.0.0        
-          git push -d origin tag actions-exam-2.0.0
+          git tag -d actions-exam-2.0.0 || true       
+          git push -d origin tag actions-exam-2.0.0 || true
           git tag actions-exam-2.0.0
           git push origin tag actions-exam-2.0.0
         env:
