--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -15,7 +15,7 @@ jobs:
       - run: echo job-2
   
   job-3:
-    if: true
+    if: false
     needs: job-2
     runs-on: ubuntu-latest
     steps:
