--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -13,7 +13,7 @@ jobs:
     needs: job-1
     runs-on: ubuntu-latest
     steps:
-      - run: echo job-2
+      - run: exit 1
   
   job-3:
     if: false
