--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -23,8 +23,8 @@ jobs:
       - run: echo job-3
   
   job-4:
-    needs: job-3
-    if: always()
+    needs: [job-2, job-3]
+    if: always() && needs.job-2.result == 'success'
     runs-on: ubuntu-latest
     steps:
       - run: echo job-4
