--- a/.github/workflows/cache.yaml
+++ b/.github/workflows/cache.yaml
@@ -25,4 +25,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff
           pip install pytest
-      - run: ruff
+      - run: ruff help
