--- a/.github/workflows/skip.yml
+++ b/.github/workflows/skip.yml
@@ -7,7 +7,10 @@ jobs:
   job-1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo job-1
+    - id: step1
+      run: echo "test=hello" >> "$GITHUB_OUTPUT"
+    - id: step2
+      run: echo test=${{ steps.step1.outputs.test }}
   
   job-2:
     needs: job-1
