--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,8 +10,8 @@ website:
         href: index.qmd
       - text: About
         href: about.qmd
-  page-footer:
-    - text: "Powered by Quarto"
+  page-footer: |
+      text: "Powered by Quarto"
       href: "https://quarto.org"
 
 format:
