--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,19 +1,10 @@
 project:
   type: website
-
 website:
   title: "My Quarto Site"
   description: "A site created with Quarto"
   navbar:
-    left:
-      - text: Home
-        href: index.qmd
-      - text: About
-        href: about.qmd
-  page-footer: |
-      text: "Powered by Quarto"
-      href: "https://quarto.org"
-
+  page-footer: Powered by Quarto
 format:
   html:
     theme: cosmo
