--- a/.github/workflows/quatro.yaml
+++ b/.github/workflows/quatro.yaml
@@ -1,9 +1,10 @@
 name: Deploy Quarto Site to GitHub Pages
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main  # Change this to your default branch
+      - main1  # Change this to your default branch
 
 jobs:
   build-deploy:
