--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -13,7 +13,7 @@ jobs:
         script: |
           const workflowName = 'output'; // Replace with the name of your workflow
           const { owner, repo } = context.repo;
-          const workflows = await github.actions.listRepoWorkflows({
+          const workflows = await github.rest,actions.listRepoWorkflows({
             owner,
             repo
           });
