--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   dispatch:
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
     steps:
     - name: Trigger Playwright e2e Tests workflow
       uses: actions/github-script@v6
