--- a/.github/workflows/venv.yaml
+++ b/.github/workflows/venv.yaml
@@ -21,6 +21,8 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           python -m pip install requests
+          ls -l
+          ls -l venv
 
       - uses: actions/upload-artifact@v4
         with:
@@ -43,7 +45,10 @@ jobs:
         with:
           name: venv
 
-      - run: la -l
+      - run: |
+          ls -l
+          ls -l venv
+
       - name: Activate
         run: source venv/bin/activate
 
@@ -64,7 +69,10 @@ jobs:
         with:
           name: venv
 
-      - run: la -l
+      - run: |
+          ls -l
+          ls -l venv
+          
       - name: Activate
         run: source venv/bin/activate
 
