--- a/.github/workflows/venv.yaml
+++ b/.github/workflows/venv.yaml
@@ -41,9 +41,14 @@ jobs:
         with:
           python-version: '3.11.9'
 
+      - run: |
+          pwd
+          echo $GITHUB_WORKSPACE
+          
       - uses: actions/download-artifact@v4
         with:
           name: venv
+          path: .
 
       - run: |
           ls -l
@@ -68,6 +73,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: venv
+          path: .
 
       - run: |
           ls -l
