--- a/.github/workflows/venv.yaml
+++ b/.github/workflows/venv.yaml
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: venv
-          path: .
+          path: ./venv
 
       - run: |
           ls -l
@@ -73,7 +73,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: venv
-          path: .
+          path: ./venv
 
       - run: |
           ls -l
