--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -14,7 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Print current directory
-      run: pwd
+      run: |
+        pwd
+        ls -l
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v2
@@ -25,10 +27,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install requests
+        ls -l
 
-    - name: Check Git version
-      run: git --version
-      
     - name: Cache pre-commit hooks
       uses: actions/cache@v2
       with:
@@ -36,10 +36,13 @@ jobs:
         key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
 
     - name: Install pre-commit
-      run: pip install pre-commit
+      run: |
+        python -m pip install pre-commit
+        ls -l
 
     - name: Run pre-commit with debug
       run: |
+        ls -l
         git status
         git branch
         pre-commit run
