--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -17,6 +17,7 @@ jobs:
       run: |
         pwd
         ls -l
+        git status
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v2
