--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.cache/pre-commit
-        key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
+        key: ${{ runner.os }}-precommit
 
     - name: Install pre-commit
       run: |
