--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
   - repo: https://github.com/oleg-proudnikov/actions-exam
-    rev: main
+    rev: 2.0.0
     hooks:
     - id: actions-exam
