--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,4 +2,4 @@ repos:
   - repo: https://github.com/oleg-proudnikov/actions-exam
     rev: 3.0.0
     hooks:
-    - id: actions-exam
+    - id: trailing-whitespace
