--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 repos:
-  - repo: https://github.com/oleg-proudnikov/actions-exam
-    rev: 3.0.0
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v1.2.3
     hooks:
-    - id: trailing-whitespace
+    -   id: trailing-whitespace
+
