--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -11,37 +11,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Print current directory
-      run: |
-        pwd
-        ls -l
-        git status
-
     - name: Set up Python 3.11
       uses: actions/setup-python@v2
       with:
         python-version: 3.11
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install requests
-        ls -l
+      run: python -m pip install --upgrade pip
 
     - name: Cache pre-commit hooks
       uses: actions/cache@v2
       with:
         path: ~/.cache/pre-commit
-        key: ${{ runner.os }}-precommit
+        key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
 
     - name: Install pre-commit
-      run: |
-        python -m pip install pre-commit
-        ls -l
+      run: python -m pip install pre-commit
 
     - name: Run pre-commit with debug
-      run: |
-        ls -l
-        git status
-        git branch
-        pre-commit run
+      run: pre-commit run --all-files
+
