--- a/.github/workflows/multiline-body.yaml
+++ b/.github/workflows/multiline-body.yaml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch
 
 jobs:
-  deploy:
+  create-issue:
     runs-on: ubuntu-latest
     steps:
-      - name: Get last notification
+      - name: Output multiline table
         id: check_repo
         run: |
           echo "table<<EOF" >> $GITHUB_OUTPUT
@@ -16,10 +16,13 @@ jobs:
           | 1 | 2 |
           ' >> $GITHUB_OUTPUT
           echo EOF >> $GITHUB_OUTPUT
-      - name: Create Issue
+      - name: Create table environment
         run: |
           echo '${{ steps.check_repo.outputs.table }}'
           echo "table='${{ steps.check_repo.outputs.table }}'" | awk '{printf "%s\\n", $0}' >> $GITHUB_ENV
+
+      - name: Create Issue
+        run: |
           issue_body='{
             "title": "Titolo",
             "body": "${{ env.table }}"
@@ -28,15 +31,3 @@ jobs:
           echo "$issue_body"
           curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -d "$issue_body" https://api.github.com/repos/${GITHUB_REPOSITORY}/issues
 
-
-  notification:
-    runs-on: ubuntu-latest
-    needs: deploy
-    if: always()
-    steps:
-      - name: Notification
-        timeout-minutes: 1
-        run: |
-          echo "$LAST_NOTIFICATION_MESSAGE"
-        env:
-          LAST_NOTIFICATION_MESSAGE: ${{ needs.deploy.outputs.lastNotificationMessage }}
