--- a/.github/workflows/id-token.yaml
+++ b/.github/workflows/id-token.yaml
@@ -2,6 +2,9 @@ name: id-token
 
 on:
   workflow_dispatch:
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 jobs:
   tests:
@@ -13,4 +16,4 @@ jobs:
           ID_TOKEN=$(curl -s -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=api://demo" | jq -r .value)
           echo $ID_TOKEN | base64
 
-
+# workflow_dispatch: "sub": "repo:oleg-proudnikov/actions-exam:ref:refs/heads/main"
