--- a/.github/workflows/branch-workflow.yaml
+++ b/.github/workflows/branch-workflow.yaml
@@ -4,10 +4,7 @@ on:
   workflow_dispatch
 
 jobs:
-  dispatch:
+  run:
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
     steps:
-      - name: Trigger Playwright e2e Tests workflow
-        run: echo 1
+      - run: echo 2
