--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -6,6 +6,9 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        name: [a,b,c]
     # Map a step output to a job output
     outputs:
       output1: ${{ steps.step1.outputs.test }}
@@ -14,7 +17,7 @@ jobs:
       - id: step1
         run: echo "test=hello" >> "$GITHUB_OUTPUT"
       - id: step2
-        run: echo "test=world" >> "$GITHUB_OUTPUT"
+        run: echo "test=${{ matrix.name }}" >> "$GITHUB_OUTPUT"
   job2:
     runs-on: ubuntu-latest
     needs: job1
