--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -6,9 +6,9 @@ on:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        name: [a,b,c]
+    # strategy:
+    #   matrix:
+    #     name: [a,b,c]
     # Map a step output to a job output
     outputs:
       output1: ${{ steps.step1.outputs.test }}
@@ -26,4 +26,9 @@ jobs:
           OUTPUT1: ${{needs.job1.outputs.output1}}
           OUTPUT2: ${{needs.job1.outputs.output2}}
         run: echo "$OUTPUT1 $OUTPUT2"
+      - run: |
+         curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/oleg-proudnikov/actions-exam/environments/DEV/variables/URL
+  
+
         
