--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -21,6 +21,8 @@ jobs:
   job2:
     runs-on: ubuntu-latest
     needs: job1
+    permissions:
+      deployments: read
     steps:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
