--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -20,6 +20,7 @@ jobs:
         run: echo "test=${{ matrix.name }}" >> "$GITHUB_OUTPUT"
   job2:
     runs-on: ubuntu-latest
+    environment: DEV
     needs: job1
     permissions:
       deployments: read
@@ -29,6 +30,7 @@ jobs:
           OUTPUT2: ${{needs.job1.outputs.output2}}
         run: echo "$OUTPUT1 $OUTPUT2"
       - run: |
+         echo ${{ env.URL }}
          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oleg-proudnikov/actions-exam/environments/DEV/variables/URL
   
