--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -30,7 +30,7 @@ jobs:
           OUTPUT2: ${{needs.job1.outputs.output2}}
         run: echo "$OUTPUT1 $OUTPUT2"
       - run: |
-         echo ${{ env.URL }}
+         echo $URL
          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/oleg-proudnikov/actions-exam/environments/DEV/variables/URL
   
