--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -31,3 +31,5 @@ jobs:
             image: api
           - isWebhook: false
             image: webhook
+    steps:
+      - run: echo ${{ matrix.image }}
