--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -15,7 +15,7 @@ jobs:
           - api
           - webhook
         isCollector:
-          - false
+          - true
         isWorker:
           - false
         isApi:
