--- a/.github/workflows/matrix.yaml
+++ b/.github/workflows/matrix.yaml
@@ -1,14 +1,35 @@
-name: empty-matrix
+name: matrix
 
 on:
   workflow_dispatch
 
 jobs:
   docker:
-    name: Empty Matrix
+    name: Build and push Docker Images
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: []
+        image:
+          - collector
+          - workers
+          - api
+          - webhook
+        isCollector:
+          - true
+        isWorker:
+          - false
+        isApi:
+          - false
+        isWebhook:
+          - false
+        exclude:
+          - isCollector: false
+            image: collector
+          - isWorker: false
+            image: workers
+          - isApi: false
+            image: api
+          - isWebhook: false
+            image: webhook
     steps:
       - run: echo ${{ matrix.image }}
