--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -31,6 +31,8 @@ jobs:
         run: echo "$OUTPUT1 $OUTPUT2"
       - run: |
           gh api repos/$GITHUB_ACTION_REPOSITORY/actions/runs/$GITHUB_RUN_ID
+        env:
+          GH_TOKEN: ${{ github.token }}
       - run: |
          echo ${{ vars.URL }}
          curl -L -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" \
