--- a/.github/workflows/outputs.yaml
+++ b/.github/workflows/outputs.yaml
@@ -30,6 +30,7 @@ jobs:
           OUTPUT2: ${{needs.job1.outputs.output2}}
         run: echo "$OUTPUT1 $OUTPUT2"
       - run: |
+          echo repos/$GITHUB_ACTION_REPOSITORY/actions/runs/$GITHUB_RUN_ID
           gh api repos/$GITHUB_ACTION_REPOSITORY/actions/runs/$GITHUB_RUN_ID
         env:
           GH_TOKEN: ${{ github.token }}
