--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,9 +9,31 @@ jobs:
     steps:
       - name: docker run
         run: |
-          docker run --rm -d -p 8080:80 nginx
+          docker run -it --rm -d -p 8080:80 nginx
           which netstat
           netstat -n
       - name: netstat
         run: |
           netstat -n| grep 8080
+
+    import tweepy
+
+    # Your credentials from Twitter Developer Portal
+    consumer_key = "your_consumer_key"
+    consumer_secret = "your_consumer_secret"
+    access_token = "your_access_token"
+    access_token_secret = "your_access_token_secret"
+
+    # Authenticate to Twitter
+    auth = tweepy.OAuthHandler(consumer_key, consumer_secret)
+    auth.set_access_token(access_token, access_token_secret)
+
+    # Create API object
+    api = tweepy.API(auth)
+
+    # Verify credentials
+    try:
+    api.verify_credentials()
+    print("Authentication OK")
+    except:
+    print("Error during authentication")
