--- a/.github/workflows/SHARED-PROJECT-CI-BUILD.yaml
+++ b/.github/workflows/SHARED-PROJECT-CI-BUILD.yaml
@@ -19,4 +19,5 @@ jobs:
       - name: Build Master
         id: buildmaster
         run: |
+          chmod +x shared-project/publish.sh
           ./shared-project/publish.sh
