--- a/.github/workflows/boolean-input.yaml
+++ b/.github/workflows/boolean-input.yaml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   graphics:
+    runs-on: ubuntu-latest
     steps:
       - name: call graphicstransform deploy
         if: inputs.graphics
