--- a/.github/workflows/boolean-input.yaml
+++ b/.github/workflows/boolean-input.yaml
@@ -15,6 +15,8 @@ jobs:
   graphics:
     runs-on: ubuntu-latest
     steps:
+      - name: Show github context
+        run: echo ${{ toJson(github) }}
       - name: call graphicstransform deploy
         if: ${{ github.event.inputs.graphics == true }}
         run: echo graphics
