--- a/.github/workflows/dynamic-secret.yaml
+++ b/.github/workflows/dynamic-secret.yaml
@@ -9,12 +9,7 @@ jobs:
     steps:
       - name: Setup secret names
         run: |
-          echo name_1=secret_1 >> $GITHUB_ENV
-          echo name_2=secret_2 >> $GITHUB_ENV
+          echo n=1 >> $GITHUB_ENV
       - name: Read secrets
         run: |
-          echo name_1=${{ env.name_1 }}
-          echo name_2=${{ env.name_2 }}
-
-          echo ${{ secrets[env.name_1] }} | base64
-          echo ${{ secrets[env.name_2] }} | base64
+          echo ${{ secrets[ format('SECRET_{0}', env.n) ] }} | base64
