--- a/.github/workflows/service.yaml
+++ b/.github/workflows/service.yaml
@@ -15,3 +15,9 @@ jobs:
       redis:
         # Docker Hub image
         image: redis
+        ports:
+          # Opens tcp port 6379 on the host and service container
+          - 6379:6379
+
+    steps:
+      - run: netstat -an|grep 6379
