--- a/.github/workflows/service.yaml
+++ b/.github/workflows/service.yaml
@@ -22,6 +22,10 @@
               - 6379:6379
 
         steps:
+          - name: Install Redis CLI
+            run: |
+              apt-get update
+              apt-get install -y redis-tools
           - name: Check Redis service
             run: |
               redis-cli -h localhost -p 6379 ping
