--- a/.github/workflows/workflow2.yaml
+++ b/.github/workflows/workflow2.yaml
@@ -1,4 +1,4 @@
-name: workflow1
+name: workflow2
 on:
   workflow_dispatch:
 
@@ -14,7 +14,7 @@ jobs:
 
       ##############################
       - name: Import external glossaries
-        run: echo workflow1 > workflow1.txt
+        run: echo workflow2 > workflow2.txt
       ##############################
 
 
@@ -43,3 +43,5 @@ jobs:
 
           echo "Final status:"
           git status
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
