--- a/.github/workflows/workflow2.yaml
+++ b/.github/workflows/workflow2.yaml
@@ -22,26 +22,11 @@ jobs:
       ##############################
       - name: Commit and push the changes
         run: |
-          echo "Initial status:"
-          git status
-
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/oleg-proudnikov/actions-exam.git
 
           git add -A
-
-          echo "Status after git add:"
-          git status
-
-          git diff --cached --exit-code && exit 0  # Exit if no changes in the staging area
-
-          echo "Committing changes:"
           git commit -m "chore: fetch content from various external sources"
-
-          echo "Pushing changes:"
           git push
-
-          echo "Final status:"
           git status
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
