--- a/.github/workflows/workflow2.yaml
+++ b/.github/workflows/workflow2.yaml
@@ -22,9 +22,11 @@ jobs:
       ##############################
       - name: Commit and push the changes
         run: |
+          cat .git/config
+
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/oleg-proudnikov/actions-exam.git
+          #git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/oleg-proudnikov/actions-exam.git
 
           git add .
           git commit -m "chore: fetch content from various external sources"
