--- a/.github/workflows/workflow_main.yaml
+++ b/.github/workflows/workflow_main.yaml
@@ -6,7 +6,9 @@ on:
 jobs:
   workflow1:
     uses: ./.github/workflows/workflow1.yaml
+    secrets: inherit
 
   workflow2:
     needs: workflow1
     uses: ./.github/workflows/workflow2.yaml
+    secrets: inherit
