--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -32,5 +32,6 @@ jobs:
 
           git add .
           git commit -m "chore: fetch content from various external sources"
+          git pull
           git push
           git status
