--- a/.github/workflows/workflow1.yaml
+++ b/.github/workflows/workflow1.yaml
@@ -14,21 +14,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      ##############################
       - name: Import external glossaries
-        run: echo $RANDOM > workflow1.txt
-      ##############################
+        run: |
+          git pull
+          echo $RANDOM > workflow2.txt
 
-
-
-      ##############################
       - name: Commit and push the changes
         run: |
-          cat .git/config
-
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          #git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/oleg-proudnikov/actions-exam.git
 
           git add .
           git commit -m "chore: fetch content from various external sources"
