--- a/.github/workflows/npm-package.yaml
+++ b/.github/workflows/npm-package.yaml
@@ -14,9 +14,13 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          npm config set registry https://registry.npmjs.org/
+          #echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          #npm config set registry https://registry.npmjs.org/
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+#  npm ERR! need auth This command requires you to be logged in to https://registry.npmjs.org/
+#  npm ERR! need auth You need to authorize this machine using `npm adduser`
+
+# npm ERR!     /home/runner/.npm/_logs/2024-08-23T21_38_17_752Z-debug-0.log
