--- a/.github/workflows/npm-package.yaml
+++ b/.github/workflows/npm-package.yaml
@@ -14,7 +14,7 @@ jobs:
       - run: npm ci
       - run: npm test
       - run: |
-          #echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
           #npm config set registry https://registry.npmjs.org/
           npm publish --access public
         env:
