--- a/.github/workflows/npm-package.yaml
+++ b/.github/workflows/npm-package.yaml
@@ -13,10 +13,12 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
-      - run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          #npm config set registry https://registry.npmjs.org/
-          npm publish --access public
+      - uses: ./.github/actions/npm-publish
+
+#      - run: |
+#          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+#          #npm config set registry https://registry.npmjs.org/
+#          npm publish --access public
 
 #  npm ERR! need auth This command requires you to be logged in to https://registry.npmjs.org/
 #  npm ERR! need auth You need to authorize this machine using `npm adduser`
