--- a/.github/workflows/npm-package.yaml
+++ b/.github/workflows/npm-package.yaml
@@ -14,6 +14,8 @@ jobs:
       - run: npm ci
       - run: npm test
       - uses: ./.github/actions/npm-publish
+        with:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 #      - run: |
 #          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
