--- a/.github/workflows/trigger-main-to-branch.yaml
+++ b/.github/workflows/trigger-main-to-branch.yaml
@@ -13,6 +13,7 @@ jobs:
       contents: read
 #      actions: write
     steps:
+      - uses: actions/checkout@v4
       - name: Build main
         run: echo Build main branch
       - name: Trigger feature branch build
