--- a/.github/workflows/markdown-lint.yaml
+++ b/.github/workflows/markdown-lint.yaml
@@ -2,11 +2,8 @@
 
 name: markdown-lint
 run-name: learning github action from workflow
-on:
-  push:
-    branches:
-      - main
-      - develop
+on: workflow_dispatch
+
 jobs:
   markdown-lint:
     runs-on: ubuntu-latest
