--- a/.github/workflows/trigger-main-to-branch.yaml
+++ b/.github/workflows/trigger-main-to-branch.yaml
@@ -11,7 +11,7 @@ jobs:
     if: github.ref_name == github.event.repository.default_branch
     permissions:
       contents: read
-#      actions: write
+      actions: write
     steps:
       - uses: actions/checkout@v4
       - name: Build main
