--- a/.github/workflows/matrix-collect-outputs.yaml
+++ b/.github/workflows/matrix-collect-outputs.yaml
@@ -50,3 +50,4 @@ jobs:
       matrix:
         includes: ${{ fromJSON(needs.check-matrix.outputs.matrix) }}
     steps:
+      - run: echo ${{ matrix.includes.target }}
