--- a/.github/workflows/matrix-slack.yaml
+++ b/.github/workflows/matrix-slack.yaml
@@ -14,7 +14,7 @@ jobs:
         run: echo "Dummy step"
       - if: always()
         run: |
-          jq -cn  --arg runner ${{ matrix.runner }} --arg outcome ${{steps.main-step.outcome '$ARGS.named' > outcome
+          jq -cn  --arg runner ${{ matrix.runner }} --arg outcome ${{ steps.main-step.outcome }} '$ARGS.named' > outcome
       - uses: actions/upload-artifact@v3
         with:
           name: ${{ hashFiles('outcome')
