--- a/.github/workflows/matrix-slack.yaml
+++ b/.github/workflows/matrix-slack.yaml
@@ -24,7 +24,7 @@ jobs:
     runs-on:  ubuntu-latest
     needs: TEST-JOB
     outputs:
-      matrix: ${{ steps.collect.outputs.outcomes }}
+      outcomes: ${{ steps.collect.outputs.outcomes }}
     steps:
       - uses: actions/download-artifact@v3
       - run: |
