--- a/.github/workflows/matrix-slack.yaml
+++ b/.github/workflows/matrix-slack.yaml
@@ -26,11 +26,11 @@ jobs:
     outputs:
       outcomes: ${{ steps.collect.outputs.outcomes }}
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
       - run: |
           outcomes="$(cat */outcome | jq -c --slurp .)"
           echo $outcomes
-          echo outcomes=$outcomes >> GITHUB_OUTPUT
+          echo outcomes=$outcomes >> $GITHUB_OUTPUT
         id: collect
 
   slack-post:
