--- a/.github/workflows/matrix-slack.yaml
+++ b/.github/workflows/matrix-slack.yaml
@@ -8,7 +8,6 @@ jobs:
       matrix:
         runner: [DEV, TEST, PROD]
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
       - name: Main step
         id: main-step
@@ -24,8 +23,9 @@ jobs:
           path: outcome
 
   collect:
-    runs-on:  ubuntu-latest
     needs: TEST-JOB
+    runs-on:  ubuntu-latest
+    if: ${{ !cancelled() }}
     outputs:
       outcomes: ${{ steps.collect.outputs.outcomes }}
     steps:
