--- a/.github/workflows/matrix-slack.yaml
+++ b/.github/workflows/matrix-slack.yaml
@@ -8,16 +8,18 @@ jobs:
       matrix:
         runner: [DEV, TEST, PROD]
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Main step
         id: main-step
         run: |
           echo "Dummy step"
           exit 1
-      - if: always()
+      - if: ${{ !cancelled() }}
         run: |
           jq -cn  --arg runner ${{ matrix.runner }} --arg outcome ${{ steps.main-step.outcome }} '$ARGS.named' > outcome
-      - uses: actions/upload-artifact@v4
+      - if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ hashFiles('outcome') }}
           path: outcome
