--- a/.github/workflows/http-server.yaml
+++ b/.github/workflows/http-server.yaml
@@ -11,4 +11,5 @@ jobs:
 
           sleep 5
 
-          curl http://localhost:3000
+          curl -s http://localhost:3000
+          curl -s http://127.0.0.1:3000
