--- a/.github/workflows/http-server.yaml
+++ b/.github/workflows/http-server.yaml
@@ -6,7 +6,7 @@ jobs:
   run-http-server:
     runs-on: ubuntu-latest
     steps:
-      - run: echo '${{ toJson(env) }}'
+      - run: env
       - run: |
           python3 -m http.server 3000 &
 
