--- a/.github/workflows/boolean-input.yaml
+++ b/.github/workflows/boolean-input.yaml
@@ -5,6 +5,11 @@ on:
     inputs:
       graphics:
         type: boolean
+  push:
+    branches:
+      - main
+    paths:
+      - ./.github/workflows/boolean-input.yaml
 
 jobs:
   graphics:
