--- a/.github/workflows/boolean-input.yaml
+++ b/.github/workflows/boolean-input.yaml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
     paths:
-      - ./.github/workflows/boolean-input.yaml
+      - .github/workflows/boolean-input.yaml
 
 jobs:
   graphics:
