--- a/.github/workflows/boolean-input.yaml
+++ b/.github/workflows/boolean-input.yaml
@@ -19,8 +19,8 @@ jobs:
         run: echo '${{ toJson(github.event.inputs) }}'
       - name: Show inputs context
         run: echo '${{ toJson(inputs) }}'
-      - name: call graphicstransform deploy
-        if: inputs.graphics
+      - name: call if !inputs.graphics
+        if: ${{ !inputs.graphics }}
         run: echo graphics
       - name: call graphicstransform deploy
         if: github.event.inputs.graphics == 'true'
